--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@font-face {
+  font-family: "catchy-mager";
+  src: url("./fonts/catchy-mager.otf") format("truetype");
+}
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html {
   box-sizing: border-box;
 }
 
 body {
-  background-color: #faf9f8;
+  font-family: "catchy-mager", sans-serif;
 }
 
 .menu {
   display: flex;
   justify-content: center;
-  margin: 0px;
+  margin: 2rem 0px;
 }
 
 .menuNav {
@@ -19,22 +30,20 @@ body {
   border-bottom: 2px solid #9a8471;
   position: fixed;
   z-index: 999;
+  padding-bottom: 1rem;
 }
 
 .logo {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 20px;
   font-weight: 900;
   padding-left: 0.5rem;
 }
 
 .menuList {
-  width: 50%;
-  display: flex;
-  align-items: center;
-  margin-inline: auto;
-  justify-items: end;
-  padding-inline-start: 28rem;
+  width: 100%;
+  text-align: end;
+  padding-right: 1rem;
 }
 
 .menuList li {
@@ -42,7 +51,7 @@ body {
   width: 80%;
   text-decoration: none;
   font-weight: 800;
-  display: block;
+  display: inline;
   margin-block: 0px;
   font-size: 1.1rem;
 }
@@ -51,13 +60,19 @@ body {
   text-decoration: none;
 }
 
+.menuList li a {
+  padding-inline: 1rem;
+  color: #3b3b3b;
+}
+
 .conteinerMain {
-  width: 90%;
+  background-color: #e8e5df;
+  width: 100%;
   height: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 2rem;
+  gap: 1rem;
   padding: 1rem 2rem;
   margin: 10rem auto;
 }
@@ -68,8 +83,9 @@ body {
 }
 
 .titulo h1 {
-  font-size: 3.5rem;
+  font-size: 62px;
   font-weight: 100;
+  color: #3b3b3b;
 }
 
 .banner2 {
@@ -80,6 +96,20 @@ body {
 .efeito {
   width: 100%;
   height: 100%;
-  background-color: #e8e5df;
+  background-color: #ffffff;
   grid-column: 1/3;
+}
+
+.imagemTitulo {
+  width: 100%;
+  height: 200px;
+  border: 1px solid #9a8471;
+  margin-inline-start: -2em;
+}
+
+.imagemTitulo img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }/*# sourceMappingURL=styles.css.map */
