--- a/styles.scss
+++ b/styles.scss
@@ -1,14 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+    font-family: 'catchy-mager';
+    src: url('./fonts/catchy-mager.otf') format('truetype');
+}
+@import '_variables/_typography.scss';
+@import '_variables/_colors.scss';
+*, *::before, *::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; 
+}
+
 html{
     box-sizing: border-box;
 }
 body{
-    background-color: #faf9f8;
+    font-family: $fontePrincipal;
 }
 
 .menu{
     display: flex;
     justify-content: center;
-    margin: 0px;
+    margin: 2rem 0px;
+
 }
 .menuNav{
     width: 90%;
@@ -17,22 +31,21 @@ body{
     border-bottom: 2px solid #9a8471;
     position: fixed;
     z-index: 999;
+    padding-bottom: 1rem;
 }
 
 .logo{
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;  
+  font-family:$fonteSecundaria;  
   font-size: 20px;
   font-weight: 900;
   padding-left: 0.5rem;
 }
 
 .menuList{
-    width: 50%;
-    display: flex;
-    align-items: center;
-    margin-inline: auto;
-    justify-items: end;
-    padding-inline-start: 28rem;
+    width: 100%;    
+    text-align: end;
+    padding-right: 1rem;
+
 }
 
 .menuList li {
@@ -40,24 +53,31 @@ body{
     width: 80%;
     text-decoration: none;
     font-weight: 800;
-    display: block;
+    display: inline;
     margin-block: 0px ;
-    font-size: 1.1rem;
+    font-size: 1.1rem
 }
 
 .menuList a{
     text-decoration: none;
 }
 
+.menuList li a{
+    padding-inline: 1rem;
+    color: $corprincialfontes;
+}
+
 // conteudo da pagina
 
+
 .conteinerMain{
-    width:90%;
+    background-color: $corPrincipal;
+    width: 100%;
     height: auto;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    gap: 2rem;
+    gap: 1rem;
     padding: 1rem 2rem;
     margin: 10rem auto;
 }
@@ -68,9 +88,9 @@ body{
 }
 
 .titulo h1{
-    font-size: 3.5rem;
+    font-size: 62px;
     font-weight: 100;
-
+    color: $corprincialfontes;
 }
 
 .banner2{
@@ -81,6 +101,21 @@ body{
 .efeito{
     width: 100%;
     height: 100%;
-    background-color: #e8e5df;
+    background-color: #ffffff;
     grid-column : 1 / 3;
 }
+
+// imagens
+.imagemTitulo{
+    width: 100%;
+    height: 200px;
+    border: 1px solid #9a8471;
+    margin-inline-start: -2em;
+}
+
+.imagemTitulo img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
