--- a/styles.scss
+++ b/styles.scss
@@ -96,6 +96,8 @@ body{
 .banner2{
     width: 100%;
     background-color: #9a8471;
+    
+    
 }
 
 .efeito{
@@ -119,3 +121,15 @@ body{
     object-fit: cover;
 }
 
+.div-imagens{
+    display: flex  ;
+}
+.imagem-exemplo2{
+    border: 1px solid #000; 
+}
+
+
+.imagem-exemplo3{
+    border: 1px solid #000;
+    
+}
