--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,51 @@ body {
   border: 1px solid #000;
 }
 
-.imagem-exemplo3 {
-  border: 1px solid #000;
+footer {
+  padding-block: 2rem;
+  padding-inline: 2rem;
+  width: 100%;
+  background-color: #9a8471;
+  height: auto;
+}
+
+.logoFooter {
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 900;
+  padding-left: 0.5rem;
+  padding: 1rem 0px;
+  display: inline;
+}
+
+.secaoLinks {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  background: white;
+  border-bottom: 2px dotted black;
+}
+
+.secaoLinks li {
+  list-style: none;
+  font-size: 1rem;
+}
+
+.secaoPrimeira {
+  padding: 10px;
+}
+
+.secaoPags {
+  padding: 10px;
+}
+
+.secaoFaqs {
+  padding: 10px;
+}
+
+.vamosConversar {
+  text-align: end;
+  width: 100%;
+  display: block;
 }/*# sourceMappingURL=styles.css.map */
