--- a/styles.scss
+++ b/styles.scss
@@ -128,4 +128,61 @@ body{
     border: 1px solid #000; 
 }
 
+// footer
+
+footer{
+    padding-block: 2rem;
+    padding-inline: 2rem;
+    width: 100%;
+    background-color: #9a8471;
+    height: auto;
+} .logoFooter{
+    font-family:$fonteSecundaria;  
+    font-size: 20px;
+    font-weight: 900;
+    padding-left: 0.5rem;
+    padding: 1rem 0px;
+    display: inline;
+}
+
+
+.secaoLinks{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    background: white;
+    border-bottom: 2px  dotted black;
+}
+
+
+.secaoLinks li{
+    list-style: none;
+    font-size: 1rem;
+}
+
+
+// secoes
+.secaoPrimeira{
+    padding: 10px;
+    
+}
+
+.secaoPags{
+    padding: 10px;
+}
+
+.secaoFaqs{
+    padding: 10px;
+}
+
+.vamosConversar{
+    text-align: end;
+    width: 100%;
+    display: block;
+    
+}
+
+
+
 
